-----------------------------
Changes in 1.7.1 (05.07.2010) TA
	- BurningVideo 
		- add Normalmap Rendering ( one light only), pushed Burningvideo to 0.46
		- internal vertexformat changed
		- changed fixpoint from 9 to 10 bit fract resolution
		- renamed createBurningVideoDriver to createBurningVideoDriver and uses SIrrlichtCreationParameters like opengl
		- internal interfaces for the trianglerenders unified.
		
	- Example 11.
		changed the light billboards to use the light color. ( green light, green particle, red light red particle )
		allow to disable the bump/parallax on the earth like in the room ( with transparency )
	- added DDS Image files, DXT2, DXT3, DXT4, DXT5, based on code from nvidia and Randy Reddig
	
	- added a Halflife 1 Model Loader. ( bases on code by Fabio Concas ) Halflife 1.1.0.8, Counter-Strike 1.6 working
		-> Load all Textures ( can even optimize it to texture atlas ), all bone animation, all submodels.
		-> But to make use of the values ( named animation, mouth animation ) the Interface for IAnimatedMeshSceneNode
		has to be redone. I don't want to blow up the Interface again...
		
		TODO:
			->can handle float frames numbers, the interface for getMesh should be reworked
			I already have working implementations for MD2, MD3 and MDL to use float blendning instead
			of using some kind of fix point..
			
			This is my idea of a new getMesh interface for IAnimatedMesh

			//! Returns the IMesh interface for a frame.
			/** \param frameA: Frame number as zero based index.
			The Blend Factor is in the fractional part of frameA
			The Mesh will be calculated as
				frame = integer(frameA) * (1-fractional(frameA )) + frameB * fractional(frameA)
				FrameNr		KeyFrameA   KeyFrameB
				40.0		1			0
				40.1		0.9			0.1
				40.5		0.5			0.5
				40.9		0.1			0.9
				41.0		0			1
			\param frameB: Frame number as zero based index. The other KeyFrame which is blended with FrameA. 
			\param userParam: for Example Level of detail, or something else
			*/